@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <scraper framework="1.1" date="2012-01-16">
 	<CreateSearchUrl dest="3">
-		<RegExp input="$$1" output="&lt;url&gt;https://api.tmdb.org/3/search/movie?api_key=f090bb54758cabf231fb605d3e3e0468&amp;amp;query=\1&amp;amp;year=$$4&amp;amp;language=$INFO[language]&lt;/url&gt;" dest="3">
+		<RegExp input="$$7" output="&lt;url&gt;https://api.tmdb.org/3/search/movie?api_key=f090bb54758cabf231fb605d3e3e0468&amp;amp;query=\1&amp;amp;year=$$4&amp;amp;language=$INFO[language]&lt;/url&gt;" dest="3">
 			<RegExp input="$$2" output="\1" dest="4">
 				<expression clear="yes">(.+)</expression>
+			</RegExp>
+			<RegExp input="$$1" output="\1" dest="7">
+				<expression clear="yes">(.+)</expression>
+			</RegExp>
+			<RegExp input="$$1" output="\1" dest="6">
+				<expression noclean="1">(.+)(?:%20the$|%20an$|%20a$|%2Cthe$|%2Can$|%2Ca$)</expression>
+			</RegExp>
+			<RegExp input="$$6" output="\1" dest="7">
+				<expression>(.+)</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
